Build module updates

--- a/Src/AngryWasp.Cli/AngryWasp.Cli.csproj
+++ b/Src/AngryWasp.Cli/AngryWasp.Cli.csproj
@@ -1,19 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 <Import Project="../../External/AngryWasp.Build/AngryWasp.Build.Library.targets"/>
+<Import Project="../../External/AngryWasp.Build/AngryWasp.Build.Pack.targets"/>
   <PropertyGroup>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageId>AngryWasp.Cli</PackageId>
-    <Title>$(PackageId)</Title>
-    <Version>1.1.0</Version>
-    <Authors>AngryWasp</Authors>
+    <PackageVersion>1.1.0</PackageVersion>
     <PackageDescription>Easily create CLI based applications</PackageDescription>
-    <PackageLicenseFile>AngryWasp.LICENSE.txt</PackageLicenseFile>
     <RepositoryUrl>https://bitbucket.org/angrywasp/angrywasp.cli</RepositoryUrl>
   </PropertyGroup>
-  <ItemGroup>
-    <None Include="../../External/AngryWasp.Build/LICENSE.txt" Pack="true" PackagePath="$(PackageLicenseFile)"/>
-  </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AngryWasp.Logger" Version="*"/>
     <PackageReference Include="AngryWasp.Helpers" Version="*"/>
